--- a/Timetable.html
+++ b/Timetable.html
@@ -4,7 +4,7 @@
 
 <body>
 <p align ="center">TY Time-Table 2021<p>
-<table border=1>
+<table border=1 align = "center">
 
 <tr><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
 <tr><td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank">PE-II</a></td>     
