--- a/Timetable.html
+++ b/Timetable.html
@@ -13,7 +13,15 @@
 <tr><td> <a href=""target="_blank">PE-II</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank">Cyber Security</a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank">Technical Writing</a></td>
 <tr><td> <a href=""target="_blank">SPC T8</a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank">WP lab T8 </a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank">DAA LAB T8 </a></td> <td> <a href=""target="_blank">CGMT Lab</a></td><td> <a href=""target="_blank">TW T</a></td>
 </table>
+<p>&nbsp;</p><p>&nbsp;</</p> 
+<p>&nbsp;</p><p>&nbsp;</</p> 
+<p>&nbsp;</p><p>&nbsp;</</p> 
+<p>&nbsp;</p><p>&nbsp;</</p> 
+<p>&nbsp;</p><p>&nbsp;</</p> 
 
+<p align = "left bottom"> <h5>Designed & Maintained by <a href="www.linkedin.com/in/ShivamNimbalkar"target="_blank">ShivamNimbalkar</a></h5>
+<h5>© All Rights Reserved</h5>
+</p>
 </body>
 
 </html>
