--- a/Timetable.html
+++ b/Timetable.html
@@ -21,7 +21,7 @@
 <p>&nbsp;</p><p>&nbsp;</</p> 
 <p>&nbsp;</p><p>&nbsp;</</p> 
 
-<p align = "left bottom"> <h5>Designed & Maintained by <a href="www.linkedin.com/in/ShivamNimbalkar"target="_blank">ShivamNimbalkar</a></h5>
+<p align = "center bottom"> <h5>Designed & Maintained by <a href="www.linkedin.com/in/ShivamNimbalkar"target="_blank">ShivamNimbalkar</a></h5>
 <h5>© All Rights Reserved</h5>
 </p>
 </body>
