--- a/Timetable.html
+++ b/Timetable.html
@@ -5,7 +5,7 @@
 <body bgcolor="#18344E">
 <p align ="center">TY Time-Table 2021<p>
 <table border=1 align = "center" width=100px >
-<!--
+
 <tr><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
 <tr><td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank">PE-II</a></td>     
 <tr><td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank">Cyber Security</a></td> 
@@ -13,8 +13,8 @@
 <tr><td> <a href=""target="_blank">PE-II</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank">Cyber Security</a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank">Technical Writing</a></td>
 <tr><td> <a href=""target="_blank">SPC T8</a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank">WP lab T8 </a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank">DAA LAB T8 </a></td> <td> <a href=""target="_blank">CGMT Lab</a></td><td> <a href=""target="_blank">TW T</a></td>
 </table>
--->
-<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
+
+<!--<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>-->
 <p>&nbsp;</p><p>&nbsp;</</p> 
 <p>&nbsp;</p><p>&nbsp;</</p> 
 <p>&nbsp;</p><p>&nbsp;</</p> 
@@ -22,7 +22,7 @@
 <p>&nbsp;</p><p>&nbsp;</</p> 
 <p>&nbsp;</p><p>&nbsp;</</p>
 
-<p align = "center bottom"> <h5>Designed & Maintained by <a href="www.linkedin.com/in/ShivamNimbalkar"target="_blank">ShivamNimbalkar</a></h5>
+<p align = "center bottom"> <h5>Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank">ShivamNimbalkar</a></h5>
 <h5>© All Rights Reserved</h5>
 </p>
 </body>
