--- a/Timetable.html
+++ b/Timetable.html
@@ -4,7 +4,7 @@
 
 <body bgcolor="#18344E">
 <p align ="center">TY Time-Table 2021<p>
-<table border=1 align = "center" width=100px  >
+<table border=1 cellspacing="1" cellpadding="10" align = "center" width=100px  >
 
 <tr><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
 <font face="Poiret One" color="Black" >
