--- a/Timetable.html
+++ b/Timetable.html
@@ -6,7 +6,7 @@
 <p align ="center">TY Time-Table 2021<p>
 <table border=1 cellspacing="1" cellpadding="10" align = "center" width=100px  >
 
-<tr><td><font face="Poiret One" color="Black" >MONDAY</font></td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
+<tr><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
 <tr align ="center" ><font face="Poiret One" color="Black" ><td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank">PE-II</a></td></font>    
 <tr><td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank">Cyber Security</a></td> 
 <tr><td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank">Cyber Security</a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td>      
@@ -16,11 +16,9 @@
 </table>
 
 <!--<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>-->
-<p>&nbsp;</p><p>&nbsp;</</p> 
-<p>&nbsp;</p><p>&nbsp;</</p> 
-<p>&nbsp;</p><p>&nbsp;</</p> 
-<p>&nbsp;</p><p>&nbsp;</</p> 
-<p>&nbsp;</p><p>&nbsp;</</p> 
+<p>&nbsp;</p><p>&nbsp;</p> 
+<p>&nbsp;</p><p>&nbsp;</p> 
+<p>&nbsp;</p><p>&nbsp;</p> 
 
 <p align = "center bottom"> <h5>Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank">ShivamNimbalkar</a></h5>
 <h5>© All Rights Reserved</h5>
