--- a/Timetable.html
+++ b/Timetable.html
@@ -2,26 +2,27 @@
 <head> <title>TY Time-Table 2021</title>
 </head>
 
-<body bgcolor="#18344E">
-<p align ="center">TY Time-Table 2021<p>
-<table border=1 cellspacing="1" cellpadding="10" align = "center" width=100px  >
+<body bgcolor="white">
+    <p>&nbsp;</p>
+<p><h3 align="center">TY Time-Table 2021</h3></p>
+<table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 
-<tr><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
-<tr align ="center" ><font face="Poiret One" color="Black" ><td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank">PE-II</a></td></font>    
-<tr align ="center"><td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank">Cyber Security</a></td> 
-<tr align ="center"><td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank">Cyber Security</a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td>      
-<tr align ="center" ><td> <a href=""target="_blank">PE-II</a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank">SPC</a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank">Cyber Security</a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank">IOT</a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank">Technical Writing</a></td>
-<tr align ="center" ><td> <a href=""target="_blank">SPC T8</a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank">WP lab T8 </a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank">DAA LAB T8 </a></td> <td> <a href=""target="_blank">CGMT Lab</a></td><td> <a href=""target="_blank">TW T</a></td>
+<p>&nbsp;</p>
+<tr align ="center"><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
+<tr align ="center"><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a></td></font>    
+<tr align ="center"><td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td> 
+<tr align ="center"><td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td>      
+<tr align ="center" ><td> <a href=""target="_blank"><font  color="Black">CGMT</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">Technical Writting</font></a></td>
+<tr align ="center" ><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href=""target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href=""target="_blank"><font  color="Black">TW(T)</font></a></td>
 </font>
 </table>
 
 <!--<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>-->
 <p>&nbsp;</p><p>&nbsp;</p> 
 <p>&nbsp;</p><p>&nbsp;</p> 
-<p>&nbsp;</p><p>&nbsp;</p> 
 
-<p align = "center bottom"> <h5>Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank">ShivamNimbalkar</a></h5>
-<h5>© All Rights Reserved</h5>
+<p> <h5 align="center"><font face="Lobster" color="blue">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
+<h5 align = "center">© All Rights Reserved</h5> </font>
 </p>
 </body>
 
