--- a/Timetable.html
+++ b/Timetable.html
@@ -1,10 +1,10 @@
 <html>
-<head> <title>TY Time-Table 2021</title>
+<head> <title> TY Time-Table 2021  </title>
 </head>
 
 <body bgcolor="white">
     <p>&nbsp;</p>
-<p><h3 align="center">TY Time-Table 2021</h3></p>
+<p><h3 align="center">TY Time-Table 2021 Sem V</h3></p>
 <table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 
 <p>&nbsp;</p>
