--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,9 @@
 <title>TY CSE ADCET</title>
 <body>
 <p>
-<label> <h4>SELECT YOUR DIVISION</h4> </label>
-<select>
-<option> <a href="Timetable_A.html"> Division A</a></option>
-<option>  <a href="Timetable_B.html">Division B</a></option>
-</select>
+<h4 align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</h4> </font>
+<h4 align = "center"><a href="Timetable_A.html" target="_blank"><font face="Lobster" color="black"> Division A</a></h4></font>
+<h4 align = "center"><a href="Timetable_B.html" target="_blank"> <font face="Lobster" color="black"> Division B</a></h4></font>
 </p>
 </body>
 </head>
