--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -1,5 +1,5 @@
 <html>
-<head> <title> TY Time-Table 2021 Division B </title>
+<head> <title> TY Time-Table 2021 Division A </title>
 </head>
 
 <body bgcolor="white">
