--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,19 @@
 <head>
 <title>TY CSE ADCET</title>
 <body>
+    <center>
 <p>
+    &nbsp;
 <h4 align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</h4> </font>
 <h4 align = "center"><a href="Timetable_A.html" target="_blank"><font face="Lobster" color="black"> Division A</a></h4></font>
 <h4 align = "center"><a href="Timetable_B.html" target="_blank"> <font face="Lobster" color="black"> Division B</a></h4></font>
+</p>
+    </center>
+
+  
+<p>
+    <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
+    <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
 </p>
 </body>
 </head>
