--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -4,16 +4,17 @@
 
 <body bgcolor="white">
     <p>&nbsp;</p>
-<p><h3 align="center">TY Time-Table 2021 Sem V</h3></p>
+    <h3 align="center">TY Time-Table 2021 Sem V</h3>
+    <h4 align="center"> Div - B </h4>
 <table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 
 <p>&nbsp;</p>
 <tr align ="center"><td>Time </td><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
-<tr align ="center"><td>9:15 - 10:15 </td><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a></td></font>    
-<tr align ="center"><td>10:15 - 11:15 </td><td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td> 
+<tr align ="center"><td>9:15 - 10:15 </td><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a></td></font> <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 AP </font></a></td></font>   
+<tr align ="center"><td>10:15 - 11:15 </td><td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
 <tr align ="center"><td>11:30 - 12:30 </td><td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>     
 <tr align ="center" ><td>12:30 - 13:30 </td><td> <a href=""target="_blank"><font  color="Black">CGMT</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">Technical Writting</font></a></td>  
-<tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href=""target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href=""target="_blank"><font  color="Black">TW(T)</font></a></td>
+<tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href=""target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href=""target="_blank"><font  color="Black">TW(T)</font></a></td> <td><font  color="Black">-</font></td>
 </font>
 </table>
 
@@ -23,6 +24,10 @@
 
 <p> <h5 align="center"><font face="Lobster" color="blue">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
 <h5 align = "center">© All Rights Reserved</h5> </font>
+</p>
+<p>
+    <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
+    <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
 </p>
 </body>
 
