--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>TY CSE ADCET</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
 <body>
     <center>
 <p>
@@ -12,10 +14,11 @@
     </center>
 
   
-<p>
-    <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
-    <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 50px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 140px;" > 
-</p>
+    <p>
+        <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
+        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 50px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 140px;" > 
+    </p>
+    
 </body>
 </head>
 </html>
