--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <center>
+    <style>
+    div{
+  color: Black;
+  margin: 3px;
+  font-size: 1em font-weight: bolder
+}
+</style>
 <p>
     &nbsp;
 <h4 align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</h4> </font>
 <h4 align = "center"><a href="Timetable_A.html" target="_self"><font face="Lobster" color="black"> Division A</a></h4></font>
 <h4 align = "center"><a href="Timetable_B.html" target="_self"> <font face="Lobster" color="black"> Division B</a></h4></font>
 </p>
-    </center>
-    <h5 style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="blue">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
-<h5 style=" position: absolute;bottom: 1px; right: 145px;">© All Rights Reserved</h5> </font>
+   <div>
+    <h5 style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="black">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
+<h5 style=" position: absolute; bottom: 0px; right: 145px;">© All Rights Reserved</h5> </font>
     <p>
         <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
-        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
+        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="4%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="4%" style="position: absolute;bottom: 5px;left: 30px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="4%" style="position: absolute;bottom: 5px;left: 60px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="4%" style="position: absolute;bottom: 5px; left: 90px;" > 
     </p>
-    
+
+   </div>
 </body>
 </head>
 </html>
