--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -3,8 +3,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body bgcolor="#F8F2F2">
+<body>
     <style>
+        body{
+            background-color:#F8F252;
+        }
+        table {
+            background-color: rgb(226, 177, 177);
+        }
         .footer {
   position: fixed;
   left: 0;
