--- a/Index.html
+++ b/Index.html
@@ -22,13 +22,11 @@
     <p>&nbsp;</p><p>&nbsp;</p> 
 </p>
    <div  class="footer">
-    <p>&nbsp;</p><p>&nbsp;</p> 
-    <p>&nbsp;</p><p>&nbsp;</p> 
-    <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="-1">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
-    <p style=" position: absolute;bottom: 1px; right: 130px;"> © All Rights Reserved</p> </font>
+    <p style=" position: absolute;bottom: 15px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="-2">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
+    <p style=" position: absolute;bottom: 1px; right: 127px;"><font face="Lobster" color="#D6D6D6"size="-2"></font> © All Rights Reserved</p> </font>
     <p>
         <p style="position: absolute;bottom: 25px;left: 1px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
-        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
+        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 35px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 70px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 104px;" > 
     </p>
 
    </div>
