somthing i dont know

--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -6,10 +6,10 @@
 <body>
     <style>
         body{
-            background-color:#F8F252;
+            background-color:#F8F2F2;
         }
         table {
-            background-color: rgb(226, 177, 177);
+            background-color: rgb(255, 255, 255);
         }
         .footer {
   position: fixed;
