--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 15%;
+  height: 13%;
   background-color:#172337;
   }
 </style>
@@ -22,11 +22,11 @@
     <p>&nbsp;</p><p>&nbsp;</p> 
 </p>
    <div  class="footer">
-    <p style=" position: absolute;bottom: 15px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="-2">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
-    <p style=" position: absolute;bottom: 1px; right: 127px;"><font face="Lobster" color="#D6D6D6"size="-2"></font> © All Rights Reserved</p> </font>
+    <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
+    <p style=" position: absolute;bottom: 1px; right: 128px;"><font face="Lobster" color="#D6D6D6"size="3"> © All Rights Reserved</p> </font>
     <p>
-        <p style="position: absolute;bottom: 25px;left: 1px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
-        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 35px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 70px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 104px;" > 
+        <p style="position: absolute;bottom: 45px;left: 1px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
+        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 96px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 144px;" > 
     </p>
 
    </div>
