--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,13 @@
 <head>
 <title>TY CSE ADCET</title>
 </head>
-<body bgcolor="#F8F2F2">
+
     <style>
+        .WebContainer{
+    width:100%;
+    min-width:1000px;
+    height:auto;
+}
         .footer {
   position: fixed;
   left: 0;
@@ -13,6 +18,7 @@
   background-color:#172337;
   }
 </style>
+<body bgcolor="#F8F2F2" class="WebContainer"> 
 <p>
     &nbsp;
 <p align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</p> </font>
