--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -3,8 +3,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body>
+
     <style>
+             .WebContainer{
+    width:100%;
+    min-width:1000px;
+    height:auto;
+}
         body{
             background-color:#F8F2F2;
         }
@@ -20,7 +25,8 @@
   background-color:#172337;
   }
 </style>
-    <p>&nbsp;</p>
+<body class="WebContainer">
+<p>&nbsp;</p>
 <h3 align="center">TY Time-Table 2021 Sem V</h3>
 <h4 align="center"> Div - A </h4>
 
