--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -46,7 +46,7 @@
     <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 SPC <br>T8 SPC</font></a></td></font>
 </tr>      
 <tr align ="center"><td>10:15 - 11:15 </td>
-    <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> 
+    <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> 
     <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> 
     <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
     <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
