--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -68,7 +68,7 @@
     <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
 </tr>  
 <tr align ="center" ><td>14:15 - 16:15 </td>
-    <td> <a href=""target="_blank"><font  color="Black">-</font></a></td> 
+    <td> <a href=""target="_blank"><font  color="Black"></font></a></td> 
     <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> 
     <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> 
     <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td>
