--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head> <title> TY Time-Table 2021 Division B </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
