--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -71,7 +71,7 @@
 </table>
 -->
 
-<h1 align="center"> face="Poiret One"> Under Maintanance:</h1>
+<h1> face="Poiret One"> Under Maintanance:</h1>
 <p>&nbsp;</p><p>&nbsp;</p> 
 <p>&nbsp;</p><p>&nbsp;</p> 
 
